--- a/package.json
+++ b/package.json
@@ -4,5 +4,27 @@
   "main": "index.js",
   "author": "Simon Renoult <srenoult@octo.com>",
   "license": "MIT",
-  "devDependencies": {}
+  "scripts": {
+    "start": "node bin/www",
+    "watch": "nodemon bin/www",
+    "test": "npm run lint && npm run test:spec",
+    "test:spec": "ava spec/*.spec.js",
+    "test:spec:watch": "npm run spec -- --watch",
+    "lint": "standard"
+  },
+  "devDependencies": {
+    "ava": "^0.19.1",
+    "nodemon": "^1.11.0",
+    "sinon": "^2.2.0",
+    "standard": "^10.0.2",
+    "supertest": "^3.0.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.17.2",
+    "cors": "^2.8.3",
+    "express": "^4.15.3",
+    "helmet": "^3.6.0",
+    "moment": "^2.18.1",
+    "shortid": "^2.2.8"
+  }
 }
