doc: rename project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logify",
+  "name": "storstuf",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Simon Renoult <srenoult@octo.com>",
